Revise JAXB and javax dependencies in ShardingSphere (#16863)
* Move out jaxb and java annotation api from jdk11+ profile

* Add javax.activation-api to narayana module

* Keep javax.annotation-api in test scope

* Add jaxb and java.activation-api to shardingsphere-test

* Add licenses of javax.activation-api and jaxb

* Replace javax.xml.bind.DatatypeConverter with java.util.Base64 in AESEncryptAlgorithm

* Revert "Add licenses of javax.activation-api and jaxb"

This reverts commit 327064df8e05dfda4d995095fe81e53642441c15.

* Remove profiles in pom.xml of shardingsphere-test

* Add profile for JDK 11+ into examples